Bug 437142 - Global Theme KCM does not aaply color scheme of third-party global theme correctly
Summary: Global Theme KCM does not aaply color scheme of third-party global theme corr...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_lookandfeel (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: VHI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-05-15 10:52 UTC by Patrick Silva
Modified: 2021-06-02 18:10 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-05-15 10:52:03 UTC
STEPS TO REPRODUCE
1. set Breeze global theme
2. install Layan global theme from KDE Store
3. apply Layan global theme

OBSERVED RESULT
color scheme of Layan global theme was not applied to header bar of System Settings.
I can fix this applying another dark color scheme in Colors KCM and then applying
Layan color scheme again.

EXPECTED RESULT
Global Theme KCM should apply color scheme included in Layan global theme correctly

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2021-05-18 20:57:38 UTC
X11 too? Or just Wayland?
Comment 2 Patrick Silva 2021-05-18 23:58:20 UTC
X11 too.
Comment 3 Nate Graham 2021-05-20 20:59:56 UTC
Can reproduce on both X11 and Wayland with the Layan theme.
Comment 4 Bug Janitor Service 2021-05-27 07:58:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/895
Comment 5 Nate Graham 2021-06-02 18:09:57 UTC
Git commit b41d9809aada68c1b9f5fe45d910860bb79d7c69 by Nate Graham, on behalf of Benjamin Port.
Committed on 02/06/2021 at 18:09.
Pushed by ngraham into branch 'master'.

Reuse color applicator from colors kcm in lookandfeel kcm

This will fix color header application after applying a global theme

M  +2    -2    kcms/colors/CMakeLists.txt
M  +2    -1    kcms/colors/colors.cpp
M  +19   -23   kcms/colors/colorsapplicator.cpp
M  +9    -7    kcms/colors/colorsapplicator.h
M  +3    -1    kcms/colors/plasma-apply-colorscheme.cpp
M  +2    -2    kcms/cursortheme/CMakeLists.txt
M  +1    -1    kcms/fonts/CMakeLists.txt
M  +1    -1    kcms/icons/CMakeLists.txt
A  +16   -0    kcms/kcms-common.cpp     [License: LGPL(3+eV) LGPL(v3.0) LGPL(v2.0)]
M  +1    -7    kcms/kcms-common_p.h
M  +2    -1    kcms/lookandfeel/CMakeLists.txt
M  +3    -10   kcms/lookandfeel/kcm.cpp
M  +1    -1    kcms/style/CMakeLists.txt

https://invent.kde.org/plasma/plasma-workspace/commit/b41d9809aada68c1b9f5fe45d910860bb79d7c69