Reuse color applicator from colors kcm in lookandfeel kcm

This will fix color header application after applying a global theme

BUG: 437142